<resources>
    <string name="app_name">Магазин книг</string>
    <string name="AddData">Добавить запись</string>
    <string name="EnterData">Добавить</string>
    <string name="ViewData">Показать</string>
    <string name="NameBook">Название</string>
    <string name="Author">Автор</string>
    <string name="Genre">Жанр</string>
    <string name="Cost">Стоимость</string>
    <string name="Back">Назад</string>
    <string name="Header">Книги</string>
    <string name="Delete">Удалить запись</string>
    <string name="AddBook">Добавление книги</string>
    <string name="GoToBook">--></string>
    <string name="AddPhoto">Выбрать фото</string>
    <string name="Search">Поиск</string>
    <string name="Clear">Сброс</string>
</resources>