<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddData">

    <EditText
        android:id="@+id/AddName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:gravity="start|top"
        android:hint="@string/NameBook"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/AddAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader" />

    <EditText
        android:id="@+id/AddAuthor"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="start|top"
        android:hint="@string/Author"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/AddCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddName" />

    <EditText
        android:id="@+id/AddCost"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/Cost"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddAuthor" />

    <android.widget.Button
        android:id="@+id/btnAddData"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background"
        android:onClick="AddDataMethod"
        android:text="@string/AddData"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
        app:layout_constraintEnd_toStartOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddCost" />

    <android.widget.Button
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background"
        android:onClick="GoViewData"
        android:text="@string/Back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAddData"
        app:layout_constraintTop_toBottomOf="@+id/AddCost" />

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/AddBook"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/AddName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/btnDelete"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background"
        android:onClick="DeleteData"
        android:text="@string/Delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddCost" />

</androidx.constraintlayout.widget.ConstraintLayout>